# TaskQuest

./: .gitignore  Cargo.toml  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  TEST_REPORT.md  install_hooks.sh  test_complete_system.sh  test_mechanics.rs  test_phase2.sh  test_progression.sh  test_taskquest.sh
docs/: MANUAL.md  TLDR.md
docs/archive/: MANUAL.md  PHASE3_FEATURES.md  PHASE3_SUMMARY.md  STATS_SYSTEM.md  SYNC_ANALYSIS.md  TLDR.md  report.md
src/: main.rs
src/achievements/: definitions.rs  mod.rs  tracker.rs
src/character/: avatars.rs  class.rs  level.rs  mod.rs  stats.rs
src/display/: cli.rs  formatter.rs  mod.rs
src/hooks/: mod.rs
src/progression/: gold.rs  loot.rs  mod.rs  xp.rs
src/shop/: mod.rs  rewards.rs
src/storage/: git_sync.rs  mod.rs
src/sync/: git_ops.rs  mod.rs
src/taskwarrior/: integration.rs  mod.rs  parser.rs  uda.rs
tests/: integration_test.rs
