[package]
name = "taskquest"
version = "0.1.0"
edition = "2021"
authors = ["TaskQuest Contributors"]
description = "Gamified RPG system for Taskwarrior"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
git2 = "0.18"
